--- a/微观经济学/微观经济学.md
+++ b/微观经济学/微观经济学.md
@@ -951,7 +951,179 @@ V = \frac{N_1}{1 + i} + \frac{N_2}{(1 + i)^2} + ... + \frac{N_t}{(1 + i)^t} + ..
 4. 利润也包括对承担投资风险的回报。所有这些风险必须要么通过购买保险来预防，要么在利润中获得风险溢价
 5. 公司利润是国民收入中一个最不稳定的组成部分。因此，获得公司利润的权利（由公司股票或股权来表示）就需要一个可观的风险溢价才能吸引规避风险的投资者。这一用以抵补投资风险的股权的额外回报，称为股权溢价
 6. 利润是一种剩余收入，等于总收入减去总成本。利润包括隐含收益（如所有者的资本的收益）、承担风险的回拜和创新利润
-
+## 第16章
+1. 本章考察发达工业化经济中政府的作用。市场经济中合适的经济政策目标是什么，用什么工具可以实现这些目标？一个有效率的税收体系应遵循哪些原则？把握这些问题的症结是制定有效的公共政策的关键之所在
+### A. 政府对经济的控制
+1. 税收政策和预算政策是社会变革的有力工具
+#### 政府的政策工具
+1. 政府用来影响私人经济活动的三种主要的工具。它们是：
+  + 对收入、商品和服务的税收
+  + 在某些商品或服务（如道路、教育或治安）领域的指出，以及为个人提供资源的转移支付（像社会保障和食品券）
+  + 管制或控制措施，用以指导人们从事或减少某些经济活动。比如，对企业污染的限制，确定射频频谱标准，或是强制检验新药安全性等措施
+#### 政府规模的变动趋势
+1. 在每一紧急时期(萧条、战争或事关贫困和污染等严重的社会问题时)，政府的活动范围都会扩张，但危机过后，政府的控制和支出却再也没有回到原来的水平上
+2. 高收入国家的税收和指出占GDP的份额比贫困国家要大
+#### 政府的职能
+1. 政府的四个主要职能：
+  + 提高经济效率
+  + 减少经济不公平
+  + 通过宏观经济政策稳定经济
+  + 执行国际经济政策
+#### 提高经济效率
+1. 政府经常运用自己的工具来矫正那些显著的市场失灵，其中最重要的是：
+  + 完全竞争的破坏
+  + 外部性和公共品
+  + 不完全信息
+#### 减少经济不公平
+1. 政府保障全体公民的最低生活水平
+2. 收入的再分配一般是通过税收和支出政策来进行的
+#### 通过宏观经济政策稳定经济
+1. 政府有义务正确地运用货币政策和财政政策，并严格管制金融体系，以制止这种灾难性的经济萧条。此外，政府还努力熨平经济的周期性波动，以防经济衰退时出现大规模的失业；经济扩张时出现严重的通货膨胀
+#### 执行国际经济政策
+1. 我们将国际经济政策主要分为四个方面：
+  + 减少贸易壁垒
+  + 执行援助计划
+  + 协调宏观经济政策：各国都已发现，其他国家的财政政策和货币政策会影响本国的通货膨胀、失业和金融形势。国际货币体系不可能依靠自身来运转，稳定运行的汇率体系是有效率的国际贸易体系的先决条件之一。一国的通货膨胀、失业或金融危机就不在外溢，从而避免损害整个地区
+  + 保护全球环境
+#### 公共选择理论
+1. 政府往往也会做出错误的决定，获奖很好的计划执行得非常糟糕
+2. 这些问题属于公共选择理论范畴。这种理论是一种研究政府决策方式的经济学和政治学。公共选择理论考察不同选举机制的运作方式，指出没有一种理想的机制能够将所有的个人偏好综合为一种社会选择；研究当国家干预不能提高经济效率或收入在分配存在不公平时所产生的政府失灵；还研究国会议员的短视，严格预算约束的缺乏，以及为竞选提供资金所导致的政府失灵等问题
+### B. 政府支出
+#### 文化和技术影响
+1. 除了支出金钱，政府计划还能对全国产生许多微妙的影响
+2. 互联网就是因国防部为建立一个在核战争中能够继续有效运行的通信网络逐步发展而成的
+### C. 税收的经济学问题
+1. 税是我们为文明社会所支付的代价--奥利佛温德尔霍姆斯大法官
+2. 在税收所造成的货币流动的背后，政府实际需要的是经济学中稀缺的土地、劳动和资本
+3. 通过税收，政府实际上在决定如何从公民和企业的手中取得资源以用于公共目标。通过税收所筹集的货币实际上只是一种载体，经由它才能将那些现实的经济资源由私人品转化为公共品
+#### 税收原则
+1. 指定税收制度的两个主要原则：
+  + 受益原则认为，个人所缴纳的税额英语他们从政府计划中得到的利益成比例
+  + 支付能力原则认为，人们缴纳税的数额应与其收入或财富相对应
+2. 例如，若建造一座新桥的资金要靠过桥费莱偿付，则这里所体现的就是受益原则。因为只有你使用它时才支付费用。但若建桥资金来自于所得税，则它所依据的就是支付能力原则
+#### 横向公平和纵向公平
+1. 横向公平。这个原则指出，那些在实质上没有差别的人在那谁上也应该没有差别
+2. 纵向公平。它是关于如何确定不同收入水平的人们的纳税待遇的
+3. 横向公平指的是每个人都有权得到平等待遇的原则。而纵向公平指的是，地位不同的人有权公平地享有不尽相同的待遇。不过，关于纵向公平到底应该如何应用，始终没有达成共识
+#### 税收中的实用主义折中
+1. 受益税在政府收入中的份额正在下降。现在，发达国家更多地依赖于累进所得税。在累进税下，一个收入5万美元的家庭的纳税额要高于一个收入2万美元的家庭。高收入家庭不仅要交更多的所得税，而且其纳税占收入的份额实际上也更高
+2. 累进税：随着收入的增加，税收在收入中所占比例增加
+3. 累进税不同于严格的比例税。比例税要求所有纳税人按其收入的相同比例进行纳税
+4. 累退税则使低收入家庭的纳税占收入的份额要高于高收入家庭
+5. 税收可被划分为比例的、累进的还是累退的，取决于高收入者所纳税占收入的比例是等于、大于还是小于低收入者所纳税额占其收入的比例
+6. 经济学家还发现，香烟税是累退的。因为香烟购买量上升的速度要比收入上升的速度慢
+7. 间接税是对商品和服务征收的，所以是”间接地“对个人征收。例如货物税和销售税，烟草税和汽油税，进口酷灌水以及财产税等。而直接税是对个人或企业征收的。例如个人所得税、社会保险或其他工薪税，以及遗产税和赠与税等。直接税的优点是更容易进行调整，以适应不同人的不同情况，如家庭规模、收入、年龄和一般支付能力。与此相比，间接税的优点是征收成本比较低，征管上也比较方便，因为它们可以在零售和批发环节上征收
+#### 个人所得税
+1. 有效税率或平均税率等于总纳税额除以总收入
+2. 边际税率是因为多增加1美元收入而需要多缴纳的税率
+3. 在税收分析中边际税率是个很关键的指标，因为个人和公司都总是倾向于注重他们的边际税率而不是平均税率。进一步说，当边际税率特别高的时候，人们的积极性将会严重受挫
+4. 记住”边际原则“：人们应该关心的是所发生的新增成本或新增收益；而”过去的就（应该）让它过去“。就此而言，任何税收对吉利的影响都主要来自于边际税率
+#### 社会保险税
+1. 雇员根据其收入记录和过去的社会保险缴纳情况得到退休金
+#### 消费税
+1. 销售税和货物税通常都是累退的，因为这些物品的消费者在贫困家庭的收入中所占的比例要大于在富裕家庭中所占的比例
+2. 一种在美国之外的其他国家被普遍采用的是增值税（VAT）。增值税很像销售税，但它在生产的每一阶段都进行课征
+#### 财产税
+1. 财产税主要对土地和建筑等不动产进行征收
+#### 税收的效率与公平
+#### 有效征税的目标
+1. 对劳动所得的课征。如果劳动供给曲线是向后弯曲的，则会产生劳动随税率下降而减少的悖论
+2. 对资本所得的课征。当一个部门的税收很高时，资源就会流向征税较轻的部门
+3. 全球化的影响。一国需要保证本国生产要素如资本和高技术劳工不会被吸引和流动到地税收国家
+#### 效率和公平
+1. 亨利乔治曾经说过：对土地征税对效率不会有什么影响，因为土地的供给是完全无弹性的。有效税收的现代理论提出了拉姆齐税收原则。她人为政府应对那些供给和需求最没有价格弹性的投入和产出征收最终的税。拉姆齐税收原则的理论基础是：如果一种产品在供给或需求上非常缺乏价格弹性，那么对这种产品征税对其消费和生产的影响就十分有限。在某些情况下，拉姆齐税收可以说是以最小的经济效率损失增进收入的一种办法
+## 第17章 效率与公平：重大权衡
+1. 本章旨在考察收入分配和减少不公平的两难政策抉择
+### A. 不公平的根源
+1. 要衡量人们控制经济资源的不公平，我们需要弄清收入与财富的区别。请记住，个人收入这一概念指的是某人或某家庭在某个时期（通常是一年）所获得的总的款项或现金。个人可支配收入指的是个人收入减去所有的赋税。财富或”净价值“则是某个时点上所拥有的有形资产和金融资产的货币价值，减去对银行和其他信用机构的欠款
+#### 如何衡量个收入阶层之间的不公平
+1. 洛伦兹曲线被广泛地用于对收入和财富不公平状况的分析
+2. 基尼系数。经济学家常常需要将不公平的程度进行量化。常用的量化指标是基尼系数。通过计算洛伦兹曲线阴影部分的面积乘以2可以得出基尼系数。在绝对不公平下，基尼系数等于1，而在绝对公平时基尼系数等于0
+#### 财富的分布
+1. 财富指的是金融资产和有形资产的完全所有权
+#### 美国的贫困问题
+1. 将贫困的概念变为相对收入。专家组建议当某家庭的消费还不到平均家庭在视频、服装、住房上的消费水平的50%时，该家庭即可被定义为贫困
+#### 谁是富人
+1. 许多最富的人的高收入主要来源于财产性收入，由股票、债券和不动产所带来的收入所组成
+### B. 反贫困政策
+#### 福利国家的兴起
+1. 这就是福利国家兴起的标志。在福利国家中，政府调节市场力量以保护个人能应付某些偶然事件，并保证人民有最起码的生活水平
+2. 福利国家的政策主要包括公共养老金、意外伤残保障、失业保险、医疗保险、食品和住房计划、家庭补偿以及对某些群体的收入补助
+#### 再分配的代价
+1. 公平有哪些不同的概念？首先，民主社会注重政治权利的平等
+；人们应享有公平的经济机会；经济结果的公平（”各尽所能，按需分配“）
+2. 一味地坚持结果的公平会严重阻碍经济机制发挥作用
+#### 漏洞有多大
+1. 奥肯有一只桶来刻画我们的税收和转移支付再分配体系的特征。由于高税率和慷慨的收入支持计划造成的主要无效率：管理成本的增加、工作和储蓄积极性的挫伤，以及社会经济为此付出的代价。
+#### 漏泄的加总
+1. 国家需要仔细设计其政策，以避免不可接受的不公平或重大效率损失等极端状况
+## 第18章 国际贸易
+### A. 国际贸易的实质
+#### 国际贸易与国内贸易
+1. 国内贸易和国际贸易之间还是存在三大差异:
+  + 扩展了的贸易机会
+  + 主权国家：国家有时会通过关税或配额，对国际贸易设置壁垒，以”保护“会受影响的工人或企业，是其免遭国外竞争的冲击
+  + 国际金融
+#### 美国对外贸易发展趋势
+1. 在一个特定的行业中，美国在同一时期内往往既需要进口也需要出口，因为产品的高差异性已经导致不同国家都可以在该产品市场上占有一席之地
+#### 商品和服务的国际贸易原因
+1. 国际贸易模式背后的经济因素是什么？基于以下三种原因，各国都发现参与国际贸易是有利可图的：生产条件的多样新，各国偏好不同，生产成本随规模递减
+### B. 国家间的比较优势
+#### 比较优势原则
+1. 比较原则认为，即使一国在各种商品的生产上都比其他国家都绝对地更有效率（或绝对地更缺少效率），该国也仍然能够从国际贸易中获益
+#### 似乎有悖常识
+1. 比较优势原则认为，如果各国专门生产和出口其生产成本相对低的产品（和自己比较），就会从贸易中获益。或者反过来说，如果各国进口其生产成本相对高的产品，也将从贸易中得利
+#### 贸易的经济利益
+1. 在自由贸易条件下，当各国集中在自己具有比较优势的领域进行生产和贸易时，每个国家的情况都会变得比原先要好。与没有贸易的情况相比，当各国的劳工专门生产自己具有比较优势的产品，并用以交换比较劣势的产品时，他们工作同样的时间就能获得更多的消费品
+#### 外包作为另一种贸易形式
+1. 外包是指将服务业务或生产加工等分派到海外去进行
+2. 外包贸易可视为比较优势原则在更多领域的推广
+#### 开放市场进行贸易
+1. 我们将出口价格与进口价格的比率称为贸易条件
+2. 具体的比率取决于需求的力量
+3. 竞争市场中的自由贸易使得世界生产能够上移到其生产可能性边界上
+#### 扩展到多种商品和多个国家
+#### 限制条件和结论
+1. 现在我们已经比较系统地学习了比较优势理论，它的结论适用于任何数量的国家和商品，而且可以被一般化以解决多种投入、要素比例变化及收益递减等问题。但我们必须强调这个理论有两个重要的限制条件：
+  + 古典假设。当错在本地或全球公共品的时候，贸易可能导致环境问题的恶化。而且，非弹性价格和工资、商业周期以及非自愿事业可能会导致低效率
+  + 收入分配
+2. 斯托珀萨缪尔森定理表明：已过开放贸易会增加国民收入，能消费到比不进行贸易时更多的商品和服务。这并不意味着每个个人、企业、部门或生产要素都能从贸易中获益
+3. 尽管比较优势理论有其局限性，但他是经济学中最深刻的真理之一。那些忽视比较优势的国家，在生活水平和经济增长方面，会因策而付出沉重的代价
+### C. 贸易保护主义
+1. 在自由贸易下，或更一般地说在市场上，商品总是从价格低的地区流向价格高的地区
+#### 贸易壁垒
+1. 关税是对进口商品课征的一种税
+2. 配额是一种对进口商品的数量限制
+3. 关税会提高商品的价格，减少消费和进口的数量，增加国内生产
+4. 配额与关税的影响在性质上是相同的，一个禁止性配额（阻止所有进口的配额）相当于一项禁止性关税
+5. 尽管关税和配额之间没有本质性的差别，但仍存在一些微妙的区别。关税能给政府带来收入
+6. 经济学家一般认为灌水的危害相比之下要要小一些
+#### 关税的经济成本
+1. 关税会造成经济无效率。征收关税时，消费者的经济损失超过政府的收入与厂商所得的额外利润的总和
+2. 征收关税时，部分经济影响是由关税对收入的再分配造成的，它将一部分收入从消费者哪里转移到被保护的国内生产者和劳工手中
+3. 征收关税会带来三种影响：它鼓励了无效率的国内生产；它提高了价格，从而导致消费者对征税商品的购买量低于有效率的水平；它增加了政府收入。其中前两项都给经济带来了效率成本
+#### 保护主义经济学
+1. 要求以关税或配额保护本国不受外国进口品竞争损害的主张，往往表现为多种形式，以下是主要的几类：（1）非经济观点，这种观点认为牺牲一些经济福利以支持国家其他目标是必要的；（2）若干误解经济逻辑的观点；（3） 基于市场力量或宏观经济的不完善而进行的若干分析
+#### 站不住脚的关税观
+1. 货币的价值不在于它本身，而在于它能从其他国家买到些什么
+#### 有潜在正确性的贸易保护主义
+1. 最后，我们评价三个有实际经济学价值的贸易保护主义论点：
+  + 关税可能使贸易条件变得对一国有利
+  + 对于有增长潜力的”幼稚产业“实行临时性关税保护，从长期看可能是有效率的
+  + 在某些条件下，关税有助于减少失业
+2. 能够最大化国内实际收入的关税称为最优关税
+3. 贸易条件理论可以追溯到150年前的自由贸易鼓吹者约翰斯图亚特穆勒那里。它是在充分就业和完全竞争条件下唯一可能正确的关税理论。假设美国对进口石油按最优关税征税，则导致国内石油价格上升，世界对是有的需求下降，世界市场的石油价格也将下降。因此灌水的一部分实际上会落到石油生产者的身上。即”损人利己“。（可以推知小国就不能运用这个理论，因为它不能影响世界价格）
+4. 历史上，实行贸易保护主义的一个强有力的动机是，这样做在经济衰退或滞胀时期有助于增加就业机会
+5. 对于增加就业机会和降低失业来说，关税和进口保护都不是有效率的做法。一种更有效的增加就业的途径是运用国内的货币政策和财政政策
+#### 其他贸易壁垒
+1. 我们因该注意哪些所谓的非关税壁垒（NTB）。这些非正式的限制和管制使得一国很难在外国市场上出售自己的商品
+2. 近些年，非关税壁垒的保护程度约为关税壁垒的两倍
+#### 多边贸易谈判
+1. 在关税报复游戏的结局中，所有的人都是输家
+#### 评价
+1. 经济学研究表明，各国从更加开放的贸易中得到了利益，因为它带来了贸易量的增加和更高的生活水平。但是，因为政策和经济环境不断变化，保护开放市场所进行的努力常常要接受各种检验
+#### 总结提要
+1. 如果由于失业和外汇市场的扰动，市场不能正常运行，那么比较优势原则就要加以修正。而且，如果进口品降低了某些部门和要素的收益，那么这些部门或要素就会因贸易而受到损害
 
 
 
