--- a/微观经济学/微观经济学.md
+++ b/微观经济学/微观经济学.md
@@ -1054,7 +1054,7 @@ V = \frac{N_1}{1 + i} + \frac{N_2}{(1 + i)^2} + ... + \frac{N_t}{(1 + i)^t} + ..
 ；人们应享有公平的经济机会；经济结果的公平（”各尽所能，按需分配“）
 2. 一味地坚持结果的公平会严重阻碍经济机制发挥作用
 #### 漏洞有多大
-1. 奥肯有一只桶来刻画我们的税收和转移支付再分配体系的特征。由于高税率和慷慨的收入支持计划造成的主要无效率：管理成本的增加、工作和储蓄积极性的挫伤，以及社会经济为此付出的代价。
+1. 奥肯用一只桶来刻画我们的税收和转移支付再分配体系的特征。由于高税率和慷慨的收入支持计划造成的主要无效率：管理成本的增加、工作和储蓄积极性的挫伤，以及社会经济为此付出的代价。
 #### 漏泄的加总
 1. 国家需要仔细设计其政策，以避免不可接受的不公平或重大效率损失等极端状况
 ## 第18章 国际贸易
