--- a/微观经济学/微观经济学.md
+++ b/微观经济学/微观经济学.md
@@ -1097,7 +1097,7 @@ V = \frac{N_1}{1 + i} + \frac{N_2}{(1 + i)^2} + ... + \frac{N_t}{(1 + i)^t} + ..
 3. 关税会提高商品的价格，减少消费和进口的数量，增加国内生产
 4. 配额与关税的影响在性质上是相同的，一个禁止性配额（阻止所有进口的配额）相当于一项禁止性关税
 5. 尽管关税和配额之间没有本质性的差别，但仍存在一些微妙的区别。关税能给政府带来收入
-6. 经济学家一般认为灌水的危害相比之下要要小一些
+6. 经济学家一般认为关税的危害相比之下要要小一些
 #### 关税的经济成本
 1. 关税会造成经济无效率。征收关税时，消费者的经济损失超过政府的收入与厂商所得的额外利润的总和
 2. 征收关税时，部分经济影响是由关税对收入的再分配造成的，它将一部分收入从消费者哪里转移到被保护的国内生产者和劳工手中
