--- a/计算广告/计算广告.md
+++ b/计算广告/计算广告.md
@@ -6,6 +6,6 @@
 ## 第1章 在线广告综述
 1. 在线广告，也称网络广告、互联网广告，顾名思义，指的是在线媒体上投放的广告。与传统广告不同的是，在线广告在其短短十几年的发展过程中，已经形成了以人群为投放目标、以产品为导向的技术型投放模式。它不仅为广告主带来了以准确接触目标受众为方法论的全新营销渠道，也为互联网免费产品和媒体找到了规模化变现的手段。可以说，不论在做用户产品还是商业产品，不深入了解在线广告，就不可能全面了解互联网业务。因此，互联网行业的从业者花一些时间把现代在线广告原理和产品搞清楚是必需的
 2. 计算广告仍然是大数据应用中最成熟、市场规模最大的行业
-3. 本章姜葱两个方面来探讨：一是其内涵，即在线广告这种商业活动的定义与目的；二是其外延，即在线广告发展历史中产生的关键产品形态；另外，本章还有另外一个目的，就是尽可能集中地介绍互联网广告的产品和技术术语，以方便后面的讨论
+3. 本章将从两个方面来探讨：一是其内涵，即在线广告这种商业活动的定义与目的；二是其外延，即在线广告发展历史中产生的关键产品形态；另外，本章还有另外一个目的，就是尽可能集中地介绍互联网广告的产品和技术术语，以方便后面的讨论
 4. 与线下广告相比，在线广告的产品和创意形式由于互联网媒体在形态、交互方式等方面存在差异，也呈现出各种各样的表现形式
 5. 首先，广告不完全等同于搜索或推荐，它首先是一项商业活动，然后才是一项技术；其次，在这一商业活动中，广告主、媒体和用户的利益都需要被认真考虑和满足，这样才能达到整个市场的平衡和不断发展
