--- a/计算广告/计算广告/计算广告.md
+++ b/计算广告/计算广告/计算广告.md
@@ -18,7 +18,7 @@
   + 影响力。具备影响力的产品或内容在投放广告时可以获得品牌溢价
 4. 值得指出的是，近年来迅速崛起的大量网红和自媒体，实际上主要靠影响力而非流量和数据变现
 5. 现有的在线广告体系并不能很好地处理这种以影响力为主要资产的媒体变现，这也是未来一个有趣的探索方向
-6. 将这3项资产通过商业产品的形式转变为收入的过程，即商业化（monetization）过程，与用户使用免费产品的过程是分离的，因此称为*后向变现*。从上面的介绍可以看出，无论是数据变现还是影响力变现，都是建立在流量变现的基础上的，而这样的体系也就是计算广告所支撑的、现代的商业化产品体系
+6. 将这3项资产通过商业产品的形式转变为收入的过程，即商业化（monetization）过程，与用户使用免费产品的过程是分离的，因此称为后向变现。从上面的介绍可以看出，无论是数据变现还是影响力变现，都是建立在流量变现的基础上的，而这样的体系也就是计算广告所支撑的、现代的商业化产品体系
 ### 1.2 大数据与广告的关系
 1. 大数据在工业界最显著的特点是区别于以往数据处理系统的低成本、分布式计算架构。从数据来源、处理方式和应用方法这3个角度来看，大数据问题都有明显的特点：
   + 行为数据。传统的数据处理任务往往面对的是交易数据。所谓交易数据指的是商业活动中必须记录的数据，如电信运营商的话费充值、通话记录，银行的存取款、利息等。交易数据处理的规模往往并不太大，但是对一致性和实时性的要求非常高。而商业活动中产生的非必须记录的数据，就是行为数据。电信运营商采集到的用户位置、银行的窗口排队以及网站的用户访问日志等，都属于行为数据。行为数据的加工有两个特点：首先是规模巨大；其次是对一致性的要求要低很多，例如，网站的日志丢失千分之一，往往并不是什么严重的事故
@@ -27,4 +27,57 @@
 2. 我们认为，相对于传统的洞察应用，自动化应用才是真正发挥大数据优势的应用形态
 3. 由于上述3个特点的存在，催生了Google的GFS、MapReduce和BigTable这”三驾马车“，也产生了Hadoop和Spark等开源技术方案
 ### 1.3 广告的定义与目的
-1. 广告是由已确定的出资人
+1. 广告是由已确定的出资人通过各种媒介进行的有关产品（商品、服务和观点）的，通常是有偿的、有组织的、综合的、劝服性的非人员的信息传播活动
+2. 出资人、媒体和受众这三者的利益博弈关系是广告活动的主线，这一主线将贯穿于商业和产品形态的整个演化过程。另外，该定义还阐明了广告必须是有偿的、非人员的信息传播活动，这两点限制，前者使广告的目标变得明确，后者使这一目标可以用计算的方式来优化，这些都是计算广告产生的基础
+3. 传统广告的目的主要是借助媒体的力量来快速接触大量用户，以达到宣传品牌形象，提升中长期购买率与利润空间的目的。我们称这种目的的广告为品牌广告（brand awareness）。当然，也有许多广告商希望能利用广告手段马上带来大量的购买或其他转化行为，我们称这种目的的广告位直接效果广告（direct response），有时简称为效果广告
+4. 传统媒体投送和优化效果广告的能力显然是缺乏的。这是因为，对短期效果的追求要求广告精准地送达目标人群，而这在传统媒体上缺乏有效的技术手段
+5. 数字媒体的出现使效果广告空前蓬勃地发展起来：
+  + 数字媒体的特点可以让我们低成本地投送个性化广告，这本质上是在变现流量
+  + 一些在线服务，如搜索、电子商务，由于可以更清楚地了解用户的意图，也就使广告效果的优化更加容易，这本质上实在变现数据
+  + 广告有品牌和效果两种目标
+  + 广告的根本目的是广告主通过媒体达到低成本的用户接触
+  + 按某种市场意图接触相应的人群，进而影响其中的潜在用户，使他们选择某产品的概率增加，或者对产品性价比的苛求程度降低，这才是广告的根本目的。至于短期内的转化效果，由于市场意图或媒体性质的不同，并不是直接可比的。如果仅仅以转化效果为目的来思考问题，可能会背离投放广告的正确方法论
+  + 投入产出比（Return on Investment, ROI）这一评价指标是某次广告活动的总产出与总投入的比例
+  + 一切付费的信息、产品或服务的传播渠道，都是广告
+### 1.4 在线广告表现形式
+1. 下面介绍的各种广告形式概念上有交叠，并不是并列的关系：
+  + 横幅广告（banner ad）。这是展示广告中最传统的形式。它是嵌入在页面中的图片，往往需要占据固定大小的版面
+  + 文字链广告（textual ad）。这种广告的素材形式是一段链接到广告主落地页的文字，是搜索广告的主流形式，在展示广告中也被广泛采用
+  + 富媒体广告（rich media ad）。这类广告利用视觉冲击力较强的表现形式，向用户侵入式地投送广告素材。富媒体广告常见的形式有弹窗、对联、全屏等。它比较适合在高质量的媒体做品牌性质较强的广告投放，但是对用户的使用体验往往影响也较大
+  + 视频广告（video ad）。视频广告指的是广告的创意由静态素材变成了一段视频，其信息的传播量和冲击力都得以大大提高。可以说，视频化已经成为在线广告最重要的趋势之一。有关视频广告的效果评价，除了点击率等，还可以采用用户观看时长等更接近用户印象的指标。视频广告的几种形式：
+    + 在视频内容播放之前的前插片广告。根据插入位置的不同，视频广告又可以分为前插片、后插片、暂停等类型
+    + 在信息流中插入的视频广告。在Wi-Fi场景下往往自动播放，其效果远优于普通的信息流展示广告（例如：抖音下滑视频会滑到的视频广告）
+    + 手机游戏中的激励视频广告
+  + 交互式广告（playable ad）。在移动应用和游戏推广中，交互创意可以让用户不用下载App就可以体验期内容。交互创意有两种技术方案：一是服务端交互的方案，二是HTML5模拟的方案
+  + 社交广告（social ad）。社交网络的兴起给广告传播的渠道和能力都赋予了新的空间。在社交网络中嵌入广告，可以统称为社交广告。它力求在用户的交互过程中尽可能自然地插入广告，被归于原生广告的范畴中。社交广告希望达到的效果是通过用户的扩建式传播获得更大的影响力
+  + 移动广告（mobile ad）。在应用中插入广告的SDK和相应的广告产品
+  + 邮件营销广告（Email Direct Markting, EDM）这是通过电子邮件向用户推广信息的一种营销手段。与上面的各种广告形式都不同，EDM是一种主动营销方式，可以随时向合适的用户发送信息。对EDM的运营者而言，精准地把握用户兴趣，非常有节制地向用户提供相关信息非常重要
+  + 激励广告（incentive ad）。直接激励用户产生转化以提高效果，这类广告称为激励广告。返利购买是电商行业常见的一种推广模式。特别需要注意的是，天下没有免费的午餐，激励广告虽然能显著提高转化效率，但是由于用户的真实需求并不强，因此后续效果会大打折扣，特别是在获取新客户方面的价值比较差，因此，激励广告的价格一般会显著低于非激励广告
+  + 团购。团购本质上是一种按照效果付费的泛广告产品
+  + 游戏联运。游戏联运是根据用户的最终游戏内消费在推广渠道和游戏开放商之间分成的商业产品，这仍然是一种按效果付费的泛广告产品。实际上，在中国各大Android应用市场，游戏联运的收入远远超过其他类型广告的收入
+  + 固定位导航。这主要包括网址导航站的位置输入、应用分发平台的推荐位置等付费推广位置。一般来说，这种产品的销售都采用按时间付费的模式，而不是动态的竞价模式。这是因为广告主除了引流之外，往往更加关注那些入口位置的橱窗效应
+2. 通过多种广告形式之间的竞价来决策，这是非常重要的内部流量货币化的运营理念
+### 1.5 在线广告简史
+1. 在互联网上展示横幅广告的产品形式为展示广告，也称显示广告。我们称上述的展示广告售卖模式为合约广告，即采用广告的方式约定某一广告位在某一时间段为特定广告主所独占，并且根据双方的要求，制定广告创意和投放策略。显然这样的采买模式并没有用到数字媒体可以对不同用户投放不同内容的个性化特征
+2. 互联网广告者经过探索，很快就发现了数字媒体不同于传统媒体的本质特点：可以对不同的受众呈现不同的广告创意。实际上，这是在线广告效果和规模不断发展的核心驱动力。并因此衍生出定向广告
+3. 在广告业务中，数据变现是依附在流量变现的基础上的
+4. 定向广告系统对计算机技术提出了两个需求：一是受众定向（audience targeting），即通过技术手段标定某个用户的性别、年龄或其它标签，二是广告投放（ad serving），即将广告投送由直接嵌入界面变为实时响应前段请求，并动态决策和返回合适的广告创意。此时的定向广告仍然以合约的方式进行：媒体与广告主约定广告位、时间段和投放量，并在此基础上确定合同的总金额以及量未达标的情况下的赔偿方案。这种担保式投送（Guaranteed Delivered,GD）的交易方式逐渐成为互联网合约式广告的主要模式。一般来说，这样的合约仍然主要面向品牌广告主，并且按照千次展示付费（Cost per Mile,CPM）的计费方式
+5. GD广告系统中有一个重要的计算问题，即保证满足各合约目标量的要求的同时，尽量为广告主分配到效果更好的流量。这个问题有两个难点：一是如何有效地将流量分配到各个合约相互交叉的人群覆盖上；二是要在在线的环境下实时地完成每一次展示的决策。这个就是在线分配（online allocation）问题。如果将各合约的量看作约束条件，将广告效果看作目标函数，则可以利用带约束优化（constrained optimization）的数学框架来解决
+6. 竞价广告（auction-based advertising）。在竞价模式下，供给方只像广告主保证质即单位流量的成本，但不再给出量的保证。对于每一次展示，则按照收益最高这样简单原则来决策
+7. 定向广告在”量“的约束下，最优化”质“；由于细粒度标签组合难以准确预估所导致的”质“的下降。同时，由于”量“的约束，某些广告曝光机会会给”量“需求大的广告主，导致浪费卖的更高的流量机会
+8. 如何向广告主收取每次竞价费用这一点上，并不是按照微观上最优的方案实施就可以达到整个市场最大的利益。
+9. 关于定价机制的深入研究，产生了广义第二高价（Generalized Second Price,GSP）这一竞价重要的理论
+10. 基于竞价和准确人群定向这两个核心功能，产生了广告网络（AD Network,ADN）。它批量地运营媒体的广告位，按照人群或上下文标签售卖给需求方，并用竞价的方式分配流量。广告网络的结算方式以按点击付费（Cost per Click,CPC）的方式为主。这种产品的千次展示收益（Revenue per Mille,RPM）一般来说达不到合约广告的水平,但它使大量媒体剩余流量（remnant inventory），即没有能力通过合约售卖的流量，有了可行的变现手段：这些媒体可以直接把自己的库存（inventory）托管给ADN，借助ADN的销售和代理团队让自己的流量变现（解决长尾问题）
+11. 竞价广告产生后，流量采买形式发生了变化：一是更多地面向受众而非广告位进行采买；二是越来越需要技术手段保证广告主的要求，并在此基础上优化效果
+12. 因为只能在供给方定义好的标签组合上指定出家，而不能控制每一次展示的出价，市场看起来更像一个黑盒子，所以需求方只能靠选择合适的标签组合，以及阶段性调整出价来间接控制效果。这种面向多个ADN或媒体按人群一站式采买广告，并进行量和质优化的需求方产品，称为交易终端（Trading Desk,TD）
+13. 广告网络的竞价过程是内部进行的，这无法满足广告主定制化的人群选择和优化要求。这样的需求催生了一种开放的竞价逻辑，让需求方按自己的人群定义来挑选流量，这就是实时竞价（Real Time Biding,RTB），它将竞价过程由广告主预先出价，变成每次展示时实时出价
+14. 市场上产生了聚合各媒体流量，采用实时竞价方式进行变现的新产品形态--广告交易平台（AD Exchange,ADX）
+15. 通过实时竞价，按照定制化人群标签采买广告，这样的产品就是需求方平台（Demand Side Platform,DSP）
+16. 基于DSP的广告采买也叫作程序化交易（programmatic trade）
+17. 将内容与广告以某种方式统一决策或展示的产品形式--原生广告（native ad）在近年来得到了越来越多的关注
+18. [一图读懂在线广告产品交互关系](https://www.afenxi.com/73902.html)
+
+![image](https://github.com/JiangRIVERS/ReadingNotes/blob/main/计算广告/计算广告交易平台交互图.jpg)
+19. 广告发展史分为两条线：
++ 交易形态主线：展示广告->合约广告->竞价广告->实时竞价广告
++ 产品展示逻辑线：广告与内容相互独立->原生广告
