--- a/计算广告/计算广告/计算广告.md
+++ b/计算广告/计算广告/计算广告.md
@@ -81,3 +81,35 @@
 19. 广告发展史分为两条线：
 + 交易形态主线：展示广告->合约广告->竞价广告->实时竞价广告
 + 产品展示逻辑线：广告与内容相互独立->原生广告
+## 第二章 计算广告基础
+1. 可衡量的效果以及相应的计算优化，是在线广告有别于线下广告的主要特点
+2. 计算广告的核心问题：利润优化问题的概念性框架
+3. 在大多数广告产品中，可以通过计算优化的主要是收入部分，而千次展示期望收入（expected Cost per Mile,eCPM）正是计算广告中最为核心的量化指标之一
+4. eCPM又可以分解为点击率和点击价值的乘积
+### 2.1 广告有效性理论
+1. 广告的信息接收过程分为3个大阶段，即选择（selection）、解释（interpretation）与态度（attitude），或者进一步分解为6个子阶段，即曝光（exposure）、关注（attention）、理解（comprehension）、接受（acceptence）、保持（retention）与决策（decision）。
++ 曝光阶段。这一阶段指的是广告物理上展现出来的过程，其有效程度往往与广告位的物理属性有关，并没有太多可以通过技术优化的空间。实际的广告实践中，因为曝光的有效性对最终结果的影响往往远远高于其他技术性因素，所以才会有“位置为王”的说法。
++ 关注阶段。这一阶段指的是受众从物理上接触到广告，到意识上关注到它的过程。对广告而言，曝光不一定意味着关注。强曝光并不能等同于用户有效的关注。如何提高关注阶段的效率呢？
+  + 首先，尽量不要打断用户的任务。用户明确辨识出某个固定的广告位，并且不再认为它与当前网页的任务有关联时，他会下意识地屏蔽其内容
+  + 其次，明确传达向用户推送此广告的原因，这一点是受众定向广告创意优化的重要方向
+  + 最后，内容符合用户的兴趣或需求，这是行为定向的原理基础
++ 理解阶段。用户关注到了刚搞的内容并不意味着他一定能理解广告传达的信息。如何提高理解阶段的效率呢？
+  + 首先，广告内容要在用户能理解的具体兴趣范围内
+  + 其次，要注意设定与关注程度相匹配的理解门槛。例如，在电视广告中，可以用一定情节的短故事来宣传品牌；在路牌广告中，创意制作的原则是将若干主要市场诉求都表达出来；而对互联网广告，由于用户的关注程度非常低，我们应该集中强调一个主要诉求以吸引用户的注意力
++ 接受阶段。受众理解了广告传达的信息，并不表示他认可这些信息。在使用幽默、性感这样非常规的广告手段时，要特别注意这一点。广告的上下文环境对广告的接受程度有着很大的影响，同一广告出现在某游戏社区上和门户网站首页上，用户会更倾向于后者更具说服力，这也就是优质媒体的品牌价值
++ 保持阶段。对于追求长期效果的品牌广告商，当然希望广告传达的信息给用户留下鲜明的记忆，以长时间影响他的选择
++ 决策阶段。成功广告的最终作用是带来用户的转化行为，虽然这一阶段已经离开了广告的业务范围，但好的广告还是能够为转化率的提高做好铺垫的
+
+定型地说，越靠前的阶段，其效果对点击率的影响越大；越靠后的阶段，其效果对转化率的影响越大。
+### 2.2 互联网广告的技术特点
+1. 在线广告不同于传统广告的特点有如下几点：
++ 技术和计算导向。数字媒体的特点使在线广告可以进行精细的受众定向，而技术又使得广告决策和交易朝着计算驱动的方向发展
++ 效果的可衡量性。点击率绝对值得比较没有那么重要，而在一个特定时期不同广告和算法表现出来的差异，才是更有意义的
++ 创意和投放方式的标准化。标准化的驱动力来自于受众定向与程序化交易。既然需求方关心的是人群而非广告位，创意尺寸的统一化与一些关键接口标准化非常关键。在PC广告市场，有越来越多的广告平台愿意根据这些标准来设计自己的产品，因为这样大家可以充分利用整个市场的流动性，更快地创造价值。不过，在移动时代，与内容表现一致的原生化需求比创意的标准化需求更加急迫。因此，移动时代的创意标准可能会有完全不同的思路
++ 媒体概念的多样化。在从需求方看在线广告时，应该注重各种性质媒体的配合关系，并从整合营销的角度去审视和优化整体效果。既注重“转化”，又注重“引导”潜在用户。试想，如果一家电商只用返利网作为线上广告渠道，ROI一定可以做到很高，但是这样的营销能够给他带来大量潜在用户吗？答案是不能。2012年底，淘宝发布声明，宣布终止与以现金形式返利的淘宝客网站的合作，正是放映了市场对此问题的认知正在趋向一致和理性
++ 数据驱动的投放决策。广泛收集用户的行为数据和广告反馈数据，利用云计算的基础设施对用户打上合适的标签，同样根据数据在多个广告竞争同一次展示时作出决策，再将投放的结果统计数据反馈给广告操作人员以调整投放策略，这已经成为在线广告的基本投放逻辑
+### 2.3 计算广告的核心问题
+1. Andrei Broder在提出计算广告这一课题的同时，给出了其核心研究挑战：“Find the best match between a given user in a given context and a suitable advertisement”。本书对这一表述少做加工，给出计算广告的核心问题如下：
+```
+计算广告的核心问题，是为一系列用户与上下文的组合找到最合适的广告投放策略以优化整体广告活动的利润
+```
