--- a/计算广告/计算广告/计算广告.md
+++ b/计算广告/计算广告/计算广告.md
@@ -77,6 +77,7 @@
 17. 将内容与广告以某种方式统一决策或展示的产品形式--原生广告（native ad）在近年来得到了越来越多的关注
 18. [一图读懂在线广告产品交互关系](https://www.afenxi.com/73902.html)
 
+[计算广告交易平台交互图](https://github.com/JiangRIVERS/ReadingNotes/blob/main/计算广告/计算广告交易平台交互图.jpg)
 ![image](https://github.com/JiangRIVERS/ReadingNotes/blob/main/计算广告/计算广告交易平台交互图.jpg)
 19. 广告发展史分为两条线：
 + 交易形态主线：展示广告->合约广告->竞价广告->实时竞价广告
@@ -110,6 +111,204 @@
 + 数据驱动的投放决策。广泛收集用户的行为数据和广告反馈数据，利用云计算的基础设施对用户打上合适的标签，同样根据数据在多个广告竞争同一次展示时作出决策，再将投放的结果统计数据反馈给广告操作人员以调整投放策略，这已经成为在线广告的基本投放逻辑
 ### 2.3 计算广告的核心问题
 1. Andrei Broder在提出计算广告这一课题的同时，给出了其核心研究挑战：“Find the best match between a given user in a given context and a suitable advertisement”。本书对这一表述少做加工，给出计算广告的核心问题如下：
+
 ```
 计算广告的核心问题，是为一系列用户与上下文的组合找到最合适的广告投放策略以优化整体广告活动的利润
 ```
+
+本书做了以下两个调整：
++ 首先，强调广告问题优化的是一组展示上的效果，而孤立的某一次展示上的效果。这是由于广告活动中普遍存在着量的约束，在这一约束下优化利润，其最优解往往与每次展示独立决策时有很大的不同
++ 其次，描述中去除了“given”字眼，这是由于在某些广告产品中，系统并不一定能拿到确定的用户或上下文唯一标识，但这并不意味着无法进行计算优化。同样我们也强调优化的结果是“广告投放策略”而不一定是具体的广告，这也是因为有些产品的策略并不是直接决定最后展示的。
+
+2. 计算广告核心挑战可以用一个最优化问题来表达：
+
+```math
+max\sum_{i=1}^{r}(r_i-q_i)\quad s.t.\quad \sum_{r=i}^{r}d_ik\le D_k, \forall k
+```
+其中i为展示次数；ri为收入；qi为成本；dik为限制条件。如预算。
+进一步考虑收入与成本具体依赖的因素，上面的优化问题可以写成：
+```math
+max\sum_{i=1}{r}\lbrace r(a_i, u_i, c_i)-q(a_i, u_i, c_i)\rbrace \quad s.t. \quad \sum_{i=1}^{r}d(a_i, u_i, c_i) \le D_k, \forall k
+```
+其中的a, u, c 这3个变量分别代表广告、用户与上下文，即广告活动的3个参与主体。实际上，对除DSP以外的大多数广告产品来说，要么是自营或包断资源，要么按以收定支的方式与媒体分成，其成本也对应为常数或正比于收入，在这种情况下，成本部分可以从上面的优化公式中去掉。在约束中，每次约束产生的成本d除了与a, u, c有关，还与具体某个广告主k有关
+在具体的广告产品中，油化工是可能会省略掉一些内容或参数
+### 2.3.1 广告收入的分解
+1. 对一个广告市场中具体的产品形态，能够主动优化的往往是收入而非成本
+2. 在一次广告展示产生后，有可能发生以下后续行为：
++ 点击行为。广告点击与广告展现的比率称为点击率（Click Through Rate, CTR）
++ 点击行为成功以后，将会打开广告主的落地页（landing page），落地页成功打开次数与点击次数的比例称为达到率
++ 如果用户从落地页开始，进一步完成下单等操作，则称为转化，转化次数与到达次数的比例称为转化率（Conversion Rate, CVR）
+3. 按照媒体网站和广告主网站上的行为对收入r进行分解，是实践中比较合理且容易操作的方式：
+```math
+eCPM = r(a, u, c) = \mu(a, u, c)\cdot\nu(a, u, c)
+```
+\mu 和 \nu 两个参数分别表示点击率和点击价值（click value）
+3. 在对多个候选排序时，是根据eCPM还是CTR排序，也是区别广告产品和用户产品的重要策略特征。进一步，如果我们将所有的点击价值都等同起来，那么根据eCPM和根据CTR排序实际上将得到一样的结果。因此，可以认为根据CTR排序是根据eCPM排序的一种特例，这也使得将内容与广告同一排序的原生广告称为可能。
+4. eCPM一般指的是估计的千次展示收益，它有两个很相近的概念：如果讨论的是千次展示收入，往往用RPM；如果讨论的是千次展示成本，往往用CPM。RPM和eCPM两个术语经常是一样的，但它们被用于不同的上下文中
+### 2.3.2 结算方式与eCPM估计的关系
+```
+以游戏广告为例，CPM为广告展示给用户计费；CPC为用户点击广告收费；CPA为用户激活收费（即用户注册、开始玩游戏）；CPS为分成，即用户消费后收费
+```
+
+1. 根据eCPM的分解决定哪部分由谁来估计是广告市场各种计费模式产生的根本原因，也是广告市场中商业逻辑与产品架构衔接的关键一环：
++ CPT(Cost Per Time)结算。这是将某个广告位以独占方式交给某广告主，并按独占时间段收取费用的方式。这种方式主要适用于一些强曝光属性、有一定定制性的广告位。CPT这种独占方式的售卖虽然有一些额外的品牌效果和橱窗效应产生，但是非常不利于受众定向和程序化交易的发展，因此长期看来比例会有下降的趋势
++ CPM(Cost per Mile)结算。即按照千次（mile）展示计算，这里的“mile”是拉丁文“千次”的意思。这种方式是供给方与需求方约定好的千次展示的计费标准，至于这些展示是否能带来相应的收益，由需求方来估计和控制其中的风险。对于品牌广告，由于目标是较长时间内的回报，很难通过短期数据反馈直接计算点击价值，而点击率也因为对于用户接触的核心要求变得不是唯一重要的因素。实际上，在大多数互联网品牌广告、特别是视频广告中，CPM都是主流的结算方式
++ CPC(Cost per Click)结算。即按点击计算。这种方式最早产生于搜索广告，并很快为多数效果类广告普遍采用。以CPC方式结算，在效果类广告市场中具有接近垄断的地位
++ CPS（Cost per Sale）/CPA(Cost per Action)/ROI结算，即按照订单销售、转化行为或投入产出比来结算，这些都是按照转化付费的一些变种。在这种结算方式下，供给方或中间市场除了估算点击率，还要对点击价值作出估计，这样才能合理地决定流量分配。这里存在一个明显的问题：转化是用户在广告商站内的行为，并非供给方能够直接检测和控制，也无法进行准去的估计和优化。因此，只有那些转化流程和用户体验类似的广告商组成的广告平台，按转化付费才比较可行，典型的例子就是淘宝客广告（转化流程都发生在淘宝上）和移动应用下载广告（转化流程都发生在App Store或Google Pay中）。筒体而言，对于与广告主收益直接挂钩的需求方产品来说，CPS在一定条件下是可行的；但是对于普通的中间广告市场来说，CPS并不是一种最合理的结算方式。CPA结算的广告中有两种特殊的类型：
+  + 一类是某些收集线索的直接效果广告，按照收集到的线索数结算。（用一搜索潜在用户名单多少来收费。即每次通过特定链接，注册成功后付费的一个常见广告模式。这是我们通常称为的引导注册），这称为 CPL（Cost oer Lead）方式
+  + 另一类是移动应用下载的直接效果广告，按照安装数结算，这称为CPI（Cost per Install）方式
++ oCPM（optimized CPM）结算。oCPM是Facebook主推的一种新结算方式，意思是广告平台仍然按照CPM结算费用，但会根据转化率进行优化。也就是说，虽然结算方式仍然是CPM，但是供给方会承诺点击率和点击价值估计的任务。实际中，oCPM往往是向某个广告主提供CPA结算之前的一种过渡方式
+2. 以上在线广告结算方式可以总结为下表：
+
+|结算方式|点击率估计|点击价值估计|优缺点|适用场景|
+|---|---|---|---|---|
+|CPT|需求方|需求方|可以充分发挥橱窗效应，无法利用受众定向技术|高曝光的品牌广告|
+|CPM|需求方|需求方|可利用受众定向选择目标人群，合约售卖下受众划分不能过细|有受众选择需求的品牌广告、实时竞价广告交易|
+|CPC|供给方|需求方|可以精细化分受众人群，合理的供给方和需求方分工|竞价广告网络|
+|CPS/CPA/ROI|供给方|供给方|需求方无任何风险，供给方运营难度大|效果类广告联盟、效果类DSP|
+|oCPM|供给方|供给方|向CPA方式的稳健过渡|数据收集能力强的广告平台|
+
+3. 在CPM类品牌广告中，由于曝光在媒体上产生，广告主往往会委托第三方的广告监测公司对曝光量、点击量等指标作技术核实，并以此作为结算的依据。在CPC或CPS的广告交易中，由于计费的指标，即点击或转化，在广告主的网站上产生，所以并不需要特别的监测服务。因此，可以认为广告监测的主要服务对象是品牌广告主。
+### 2.4 在线广告相关行业协会
+1. 由于供给方和需求方的博弈关系，需要一些行业协会来约束和规范市场
+### 2.4.1 交互广告局（供给方）
+1. 交互广告局（Interactive Advertising Bureau, IAB）主要关注的是在线广告供给方的利益
+2. IAB包含如下重要的规范：
+  + 展示广告创意尺寸标准。创意尺寸的统一化，对于在线广告淡化广告位概念、推广受众定向有着非常根本的促进作用。中国市场与此对比，由于广告位尺寸非常复杂，因而各个网站之间壁垒较高，非常不利于定向广告和程序采买的发展。
+  + 视频广告标准VAST（digital video ad serving template）。这一标准实际上减少了进入视频广告领域的技术障碍，使得视频广告市场规模快速发展成为可能
+  + 通用实时竞价接口标准OpenRTB。这种采买方式是为了方便需求方按照自己的受众划分高精准地才买流量
+### 2.4.1 美国广告代理协会
+美国广告代理协会（American Association of Advertising Agencies, 简称4A）。4A公司向其会员代理公司约定，至少要向广告主收取一定比例的服务费用，这一方面是为了避免行业内的恶性竞争，另一方面也是确保广告代理公司能够站在广告主的理解角度考虑问题
+### 2.4.3 美国国家广告协会
+美国国家广告商协会（Association of National Advertisers, ANA）是一个广告主的协会，也是最彻底地代表需求方利益的组织
+## 第3章 在线广告产品概述
+1. [在线广告产品进化示意](https://github.com/JiangRIVERS/ReadingNotes/blob/main/计算广告/在线广告产品进化示意.jpeg)
+
+![image](https://github.com/JiangRIVERS/ReadingNotes/blob/main/计算广告/在线广告产品进化示意.jpeg)
+
+2. 在线广告产品的发展历程，表面上看是广告产品和市场本身的进化，实际上是由于数据利用和变现需求的推动
+3. 我们将在线广告产品的发展历程分为4个阶段：
+  + 合约广告产品。可分为按时间段售卖的CPT广告和按照约定展示量售卖的CPM广告。这类广告产品主要服务于后续效果不宜直接衡量的品牌类广告主，在门户网站和视频网站较为常见。保量CPM广告产生的原动力是数据变现的需要。不过由于合约中量的约束的存在，它能够变现的往往只是人口数形这类规模较大的数据
+  + 竞价广告产品。它的最重要的形式是搜索广告。这种广告在拓展到站外展示广告流量时，演进成了对页面关键词或者用户标签竞价的产品形式，也就是ADN。竞价广告的商业逻辑与合约广告完全不同，也是解决效果类广告需求的关键产品形式。竞价广告产生的根本原因是为了变现诸如关键词、精细化用户标签等高价值但量不大的数据，从合约中放弃量的保证以后的效果
+  + 程序化交易广告产品。竞价广告的进一步发展催生了实时竞价的交易形式。实时竞价是的需求方可以更灵活地划分和选择自己的目标受众，也使得更广泛的数据使用和交易迅速发展起来。以实时竞价为核心的一系列交易方式逐渐演变为机器之间以程序化的方式完成广告交易决策，因此，这类广告称为程序化交易广告产品。程序化交易的主要推动力是市场中的广告主数据和第三方数据的使用与变现，同时它也催生了于此相关的数据交易市场
+  + 原生广告产品。原生广告产品让广告与内容尽可能以“原生”的方式共存。原生广告更加重视场景数据的加工和使用，这也代表了移动时代的新问题和新思路
+4. 每一种广告产品基本都有3个组成部分，即面向需求方的接口、面向供给方的接口以及中间的投放系统即匹配策略。这些广告中的产品环节，都属于商业产品的范畴
+### 3.1 商业产品的设计原则
+1. 商业产品指的是面向商业客户而非一般用户的产品，其中起典型的代表就是在线广告。其他的一些面向用户的互联网产品，如客户关系管理（Customer Relation Management, CRM）、网站分析（Web Analytics, WA），以及后面要提到的数据管理平台（Data Management Platform, DMP）等，都属于商业产品的范畴
+2. 用户产品演进的根本驱动力，是人们追求方便的天性。因此，用户产品的设计原则总是朝着更简单、更直观、更快捷的方向努力。而相应的产品设计重点也集中在关键功能的突出、操作过程的流畅等方面
+3. 商业产品一般都有一个明确的商业目标，而使用者的动力也是为了优化这个商业目标
+4. Facebook的广告之所以为大量的中小广告主广泛采用，主要原因并不是因为使用快捷性远超同类产品，而是因为其推广效果有目共睹。因此，商业产品的任何一项功能改进，只要能带来其对应商业目标的上升机会，即使在使用流程上引入一些不便，也是可以接受的
+5. 在优化既定商业目标这一商业产品的总体原则下，商业产品运营中还有一些需要注意的关键点如下：
+  + 相对于产品功能，要特别关注产品中的策略部分 
+  + 要特别关注数据，让运营和产品优化形成闭环。从数据分析开始，以数据结束，这样的闭环迭代是最适合商业产品的开发模式
+  + 当然在所有与使用者打交道的产品界面上，用户产品追求便捷性的设计原则依然非常重要。不过在商业产品中，实现功能以外过于新奇、炫酷的产品外观和交互模式，是应当避免的
+### 3.2 广告系统的产品接口
+### 3.2.1 广告主层级组织与偷偷放管理
+1. 广告市场非常复杂，广告系统的需求方可能是广告主、代理公司、TD（面向多个ADN或媒体，按人群一站式采买广告，并进行量和质的优化的需求方产品，称为交易终端（Trading Desk, TD））或DSP
+2. 一般来说，需求方提供的广告是分层次管理的。在多数产品中，广告的层次分为广告主、广告（推广）计划（campaign）、广告（推广）组（ad group）、广告创意（creative）等几个层级
+
+[广告层级关系示意](https://github.com/JiangRIVERS/ReadingNotes/blob/main/计算广告/广告层级关系示意.jpeg)
+
+![image](https://github.com/JiangRIVERS/ReadingNotes/blob/main/计算广告/广告层级关系示意.jpeg)
+
+3. 广告主层级管理一个广告主的通用信息，而其他3个层级则与具体的投放管理有关：
+  + 广告计划概念上对应于广告主的一次投放合同，其中包括预算、时间范围等等基本信息：
+    + 在有多个广告产品可供选择时，要在广告计划中确定投放的是哪个产品
+    + 预算分配策略
+  + 广告组对应一个具体的广告投放策略，主要设定受众定向条件和出价。广告组最重要的功能是设置各种各样的定向条件，因而是广告效果优化的关键层级。另外，对媒体的选择也可以认为是一种定向条件
+  + 广告创意则是最终展示出来的素材，可能在同一组策略下有不同尺寸的创意存在
+### 3.2.2 供给方管理接口
+1. 供给端的资源组织主要分为媒体和广告位两个层次，其中媒体可以是网站，也可以是移动应用开发者
+2. 媒体的操作比广告主方要简单，一般来说，添加和删除广告位以及查看各广告位的运营数据是主要的功能需求
+3. 某个具体广告位，根据产品功能的不同，需要的操作功能也不同，但一般来说，设定广告位尺寸、获取广告投放代码或SDK，设定该广告位对广告类型的要求，是一般通用的需求
+4. 广告平台会维护各个广告位对应的域名或用户名，以防其他域名的流量盗用广告位代码
+### 3.2.3 供需之间多种接口形式
+[供需之间的各种接口](https://github.com/JiangRIVERS/ReadingNotes/blob/main/计算广告/供需之间的各种接口.jpeg)
+
+![image](https://github.com/JiangRIVERS/ReadingNotes/blob/main/计算广告/供需之间的各种接口.jpeg)
+1. 负责变现的供给方广告产品有三种方式从媒体处对接流量：
+  + 对于Web/WAP 类网页媒体，可以在媒体页嵌入JavaScript代码，向供给方服务器发起广告请求并完成渲染。内嵌HTML5网页的移动应用也可以采用这种方式
+  + 对于原生代码实现的iOS/Android应用，需要在应用中集成供给方的SDK，其功能与网页上的JavaScript代码基本一致。但是，由于SDK的体积较大，而且可能带来应用崩溃的情况，因此在集成和测试上工作量较大
+  + 有的媒体对集成SDK或JavaScript代码有较大的顾虑，会采用API的方式对接
+2. 负责投放广告的供给方或需求方产品也有3种对接广告主的投放需求
+  + 最常见的投放方式是广告主通过一个用户界面用人工的方式管理投放和优化效果
+  + 当广告主的投放很复杂（如要设定大量关键词）或者需要自动调整优化时，广告平台会提供与界面功能相对应的API接口，以便需求方用编程的方式进行批量投放和优化。注意，这里的API传送的是广告投放的设置条件，而上面供给方与媒体之间的API传送的是广告请求的结果，两者是完全不同的
+  + 当某些特殊的广告投放需要自动对接广告主的商品和用户行为，典型的例子如面向电商客户的个性化重定向。在这种情形下，3. 需求方产品一般也要在广告主页面中嵌入JavaSctipt，并根据JavaScript代码收集到的用户数据行为进行广告决策
++ 供给方产品和需求方产品之间也有对接需求，最常见的方式有以下两种：
+  + API对接方式
+  + 程序化交易的RTB或其类似方式。RTB方式与API方式的主要区别在于，除返回广告信息之外，需求方还会给出报价，当然，这是非常本质的区别
+4. 从媒体到广告的端到端来看，每次广告请求决策过程中的S2S过程一般不能多于一次，否则会带来用户端延迟的明显上升，从而影响广告效果。不过，在移动原生应用中的广告，由于客户端可以做缓存，这一限制就没有那么重要
+## 第4章 合约广告
+1. 合约广告的重要形式是按CPM计费的展示量合约。这种方式仍然用合同约定确定一次广告活动的投放总量和展示单价，但是售卖的对象已经由”广告位“进化到了”广告位+人群“。可以说，因为数据也被直接应用在广告售卖中，所以这是在线广告发展史上的一个重要里程碑
+2. 按CPM售卖的展示量合约广告直接催生了受众定向技术
+3. 在合约广告，需求方的产品技术并没有太大发展。这是因为广告投放的要求都以合约的形式交由供给方来完成了，需求方并没有太大的优化的空间
+### 4.1 广告位合约
+1. 广告位合约是最早产生的在线广告售卖方式。它是指媒体和广告主约定在某一时间内在某些广告位上固定投送该广告主的广告，相应的结算方式为CPT。这种方式的缺点非常明显，即无法做到按受众投放广告，因而也无法进行深入的效果优化
+2. 广告位合约方式在一定特定的场景下也有可取之处：
+  + 首先，在一些强曝光属性（如手机应用的开屏广告、门户网站首页的一些特型广告位等）的广告位采用这种独占的广告投放，往往可以有效地给用户带来品牌冲击，而在其他一些横幅位置长期独占式的购买，有利于形成“橱窗效应”，塑造不断攀升的品牌价值和转化效果
+  + 其次，这种销售模式可以向广告主提供一些额外的附加服务，如同一个页面上的竞品排他，这就使高溢价的流量变现称为可能
+3. 广告位合约还有一种变形形式，即按照广告位的轮播售卖。在这种方式中，同一个用户对同一个广告位的一些列访问，被依次标上一组循环轮播序列号，如{1, 2, 3}。将其中具有同样顺序号的展示作为一个虚拟的广告位售卖给广告主。这种轮播的的售卖方式，在广告位独占式售卖库存不够而广告主又需要去定的展现规则保证时，被较广泛地采用，特别是中国门户网站的品牌广告中
+### 4.2 受众定向
+1. 受众定向本身的重要性和应用范围远远超出合约广告领域，而在各种竞价广告产品中也尤为重要
+2. 在考察某种定向方法时，有两个光剑点需要关注：
+  + 一是定向的效果，即符合该定向方式的流量高出平均效果的水平
+  + 二是定向的规模，即这部分流量占整体广告库存流量的比例
+3. 显然，效果好、覆盖率又高的定向方法是我们追求的目标，不过往往难以两全。因此，广告系统有必要同时提供多种定向方法的支持，以达到整体流量上质的最优化
+4. 另一个类似的概念是用户画像。对用户刻画的重点往往是当前购物兴趣等直接驱动效果的标签
+### 4.2.1 受众定向方法概览
+1. 市场上比较流行的定向方式。按照其有效性和在广告信息接收过程中起作用的阶段，分以下常见受众定向方法
+
+
+[常见受众定向方法一览](https://github.com/JiangRIVERS/ReadingNotes/blob/main/计算广告/常见受众定向方法一览.jpeg)
+
+![image](https://github.com/JiangRIVERS/ReadingNotes/blob/main/计算广告/常见受众定向方法一览.jpeg)
+
+2. 对受众定向的一些典型方法说明如下：
+  + 地域定向（geo-targeting）。地域定向也可以被认为是一种上下文定向，不过其计算很简单，仅仅需要简单的查表就可以完成
+  + 人口属性定向（demographical targeting）。人口属性的主要标签包括年龄、性别、受教育程度、收入水平等。人口属性有一点与兴趣标签不同，那就是它是可以监测的。如果没有特别的专门数据来源，如实名制SNS的注册信息或在线购购物的消费记录等，一般情况下要准确进行人口属性定向并不容易。在人口属性数据覆盖率不足的情况下，我们可以用已知人口属性的用户作为训练集，构造分类器对人口属性进行自动标注。但准确度有限
+  + 上下文定向（contextual targeting）。根据网页或应用的具体内容来匹配相关的广告，这就是上下文定向。上下文定向的粒度可以是关键词、主题，也可以是根据广告主需求确定的分类。在不同类别的内容上，上下文定向的效果有很大的区别。但是，这种方式有一个非常大的好处，那就是覅概率比较高。对大多数广告展示，不论对当前访问用户的信息了解有多少，往往都可以根据当前浏览的页面推测用户的即时兴趣，从而推送相关广告。由于覆盖率高，上下文定向也是ADN中首选的定向方法之一
+  + 行为定向（behavioral targeting）。行为定向是根据用户的历史访问行为了解用户兴趣，从而投送相关广告的。行为定向可以被认为是一系列上下文定向的融合结果。因此，上下文定向是行为定向的基础，而且对各种类型的上下文定向，都可以有相对应的行为定向方式
+  + 精确位置定向（hyper-local targeting）。在移动设备上投放广告时，我们有可能获得非常精确的地理位置。这也使得大量区域性非常强的小广告主（如餐饮、美容等）有机会投放精确定位的广告。这已经与传统意义上的地域定向有了质的区别，也称为移动广告最重要的机会之一
+  + 重定向（retargeting）。这是一种最简单的定制化标签，其原理是对某个广告主过去一段时间内的访客投放广告以提升效果
+  + 新客推荐定位（look-alike targeting）。由于重定向的量太小，而且无法满足广告主接触潜在用户的需求，因此不能仅仅依靠它来投送广告。新客推荐定向的思路是根据广告主提供的种子访客信息，结合广告平台更丰富的数据，为广告主找到行为上相似的潜在用户。这一方法的目的是希望在同等用户覆盖率的情况下，达到比依稀通用的兴趣标签更好的效果，这也从实质上体现了广告主数据的核心价值
+  + 动态定价（dynamic pricing）。这并不是一种定向广告技术，但却的与其有一定的关联。团购也是一种变相的广告形式，这种广告有两个显著的特点：
+    + 首先是一般都针对区域性的广告主，因此其余定向或者直接按照地域分类组织是必要的功能
+    + 另外，团购主要是利用价格工具，直接降低用户在决策阶段的门槛，使得对价格敏感的用户转化效果有明显的提升
+  + 场景定向（scenario targeting）。场景定向是移动环境下的新问题。移动设备体现了场景上的丰富性。你在使用手机时的背景状态就是场景。另外，移动设备丰富的传感器和状态信息为场景的判断提供了可能
+### 4.2.2 受众定向标签体系
+1. 在一些反映用户兴趣的受众定向方法（如行为定向、上下文定向）我们需要一个标签系统，将每个用户映射到其中的一个或几个标签上去。这是产品策略中特别关键的一环。一般来说，标签体系有两种组织方式：
+  + 一种是按照某个分类法（taxonomy）制定一个层次标签系统，其中上层的标签是下一层的父节点，在人群覆盖上是包含关系。一些面向品牌广告的受众定向，往往采用这种结构化较强的标签体系。需要指出，这一体系中的标签是根据需求方的逻辑而制定的，某些在媒体方意义很大的分类标签，如军事等，由于没有明确的需求对应，不宜出现在标签体系中
+  + 另外一种兴趣标签的组织方式，是根据广告主的具体需求设置相应的标签，所有的标签并不能在同一个分类系统中描述，也不存在明确的父子关系。这种半结构化或非结构化的标签体系往往包含一些比较精确地标签集合，因而主要适用于多种目标，特别是效果目标并存的广告主的精确流量选择需求
+2. 是选择结构化的兴趣标签系统还是选择非结构化的兴趣标签体系，更多的是商业上的决策，主要考虑下面两种情况：
+  + 当标签作为广告投放的直接标的时（包括CPM广告及竞价广告中直接可被广告主选择的人群），这些标签既要能够为广告主所理解，又要方便广告主的选择。因此，在这种情况下，结构化的层级标签体系往往是较合理的产品方案
+  + 当标签仅仅是投放系统需要的中间变量，作为CTR预测或者其他模块的变量输入时，结构化的标签体系其实是没有必要的，应该完全按照效果驱动的方式来规划和挖掘标签，而各个标签之间也不太需要层次关系的约束。其目的是追求效果或特殊人群定位，因而组织上的规整性也就让位于效果的准确性了
+3. 还有一种特殊的标签形式，即关键词。直接按照搜索或浏览内容的关键词划分人群，往往可以达到比较准确的效果（常见于搜索广告）
+### 4.2.3 标签体系的设计思路
+1. 标签体系的设计必须要分行业进行，而其中的关键思路是深入研究该行业的用户决策过程。简单来说，就是要洞彻在这个行业里，用户决定买什么、不买什么的原因和逻辑。举例来说：在游戏行业，游戏有与电影和音乐类似的艺术性质，它的用户决策过程总体上不易把握。因为人们对艺术的喜爱并不是理性的，也就难以总结规律。如果直接用RPO、ACT、SLG、RTS、STG这些游戏分类作为标签体系行不行呢？其实这些分类只是为了便于游戏的组织和索引，并不能准确反映用户的决策逻辑。难道一个“RPG游戏爱好者”看到RPG就非玩不可，其他的游戏都不屑一顾吗？显然不是如此。要想把游戏的用户标签做好，就要深入细分的游戏场景中去深入研究。比方说玩老虎机游戏的用户往往经常换不用素材的新游戏，也就是说，将“老虎机爱好者”作为一个用户标签，与用户决策过程是相符的。而喜欢海岛奇兵游戏的用户，对SuperCell新出的游戏也往往心仪，此时“SuperCell”这个品牌就成了有效的用户标签
+### 4.3 展示量合约
+1. 在今天，即使是以品牌为目的的投放，广告位合约也并非主流。实际上互联网主流的品牌广告投放方式是按照CPM结算的展示量合约。这种合约还有一个名称，就是担保式投送，即GD，其中“担保”指的就是量的约定。在实际执行中，在未能完成合约中的投放量时，可能要求媒体承担一定的赔偿
+2. 媒体从按固定广告位售卖变为按CPM售卖，初衷是为了在流量变现的基础上加上数据变现，面向的仍然是原来的品牌广告主。广告主按广告位采买时，比较容易预估自己拿到的流量，可是按照人群定向的方式采买，流量却又诸多不确定的因素。因此，需求方希望在合约中加入对量的保证，才能放心地采买
+3. 展示量合约并没有摆脱广告位这一标的物。这是因为在CPM这种结算方式下，无法将多个差别很大的广告位打包成同一售卖标的。因为不同广告位的曝光有效性可能差别巨大，所以合理的CPM也会相应地大幅变动。实践中展示量合约往往是以一些曝光量很大的广告位为基础，再切分人群售卖
+4. 虽然从交易模式上看，展示量合约仍然是比较传统的交易模式，但是从技术层面上看，这种模式的出现实际上已经反映了互联网广告计算驱动的本质：分析得到用户和上下文的属性，并由服务端根据这些属性及广告库情况动态决定广告候选。这一商业模式的出现，需要有一系列技术手段的支持
+### 4.3.1 流量预测
+1. 展示量合约售卖的是某特定人群上的广告曝光次数，而人群不同于确定的广告位，因此必须在合约中约定投放的量。于是就产生了流量预测（traffic forecasting）这一问题。流量预测在广告产品中有以下3个主要用途：
+  + 售前指导。在展示量合约广告中，因为要约定曝光总数，所以事先尽可能准确地预测各人群标签的流量直观重要
+  + 在线流量分配。同样是在展示量合约广告中，由于合约之间在人群选择上会有很多交集，当一次曝光同时满足两个以上合约的要求时，怎样决策将它分配给哪个合约以达到整体满足所有合约的目的，这是在线分配问题。各种在线分配算法都要依赖流量预测的结果，以达到高效和准确的目的
+  + 出价指导。在竞价广告中，由于没有了量的保证，广告主往往需要根据自己预测的出价先了解一下可能获得多少流量，以判断自己的出价是否合理
+2. 广告里一般的流量预测问题，可以描述成对流量t(u, b)这个函数的估计，其中第一个参数u是给定的人群标签或人群标签的组合，第二个参数b是出价
+### 4.3.2 流量塑性
+1. 流量预测对于展示量合约非常重要，不过这本质上还是被动地统计流量的情况。在有些情形下，我们可以主动地影响流量，以利于合约的达成。这一产品策略问题称为流量塑性（traffic shaping）
+2. 流量塑性的典型场景可以参考门户网站上售卖的展示量合约广告。门户网站各子频道的流量严重依赖于首页关键位置链接的导流。假如在车展期间，汽车频道上的展示广告需求旺盛，那么首页上的链接应该更多地给汽车频道导流以利于收入的增加。这样的想法相当直接，在实际中也被广泛地使用。不过，从商业产品的要求来看，要系统化、高效率地达到流量塑性的目标，需要将用户产品与广告产品的需求情况打通，然后按照一定的准则，在不伤害用户体验的情况下，尽可能提高商业变现的效率。
+3. 流量塑性问题已经涉及用户产品与商业产品的内在联系
+### 4.3.3 在线分配
+1. 展示量合约这种保量合约会面临一个问题：各个合约要求的人群很可能大量交叠，如何设计分配策略，使得各个合约都尽可能被满足，为了描述这一策略问题，我们将其简单化为一个二部图（bipartite graph）匹配问题
+
+[在线分配中的二部图匹配问题示意](https://github.com/JiangRIVERS/ReadingNotes/blob/main/计算广告/在线分配中的二部图匹配问题示意.jpeg)
+
+![image](https://github.com/JiangRIVERS/ReadingNotes/blob/main/计算广告/在线分配中的二部图匹配问题示意.jpeg)
+
+2. 在线分配需要根据历史数据和某种策略，离线得到一个分配方案，线上则照此方案执行
+3. 随着标签数量的增加，供给节点的数量会以指数速度上升，而每一个供给节点的流量当然也就迅速收缩。当节点流量过小时，对其进行准确的预测就变得相当困难，这时上面所说的方案就会变得完全不可行。因此，展示量合约这类广告在人群标签非常丰富和精准时，是无法有效地运作的，而这正是竞价广告产品的原动力之一
+### 4.3.4 产品案例
+1. 合约广告的尴尬：大量精确的标签在合约量的约束下基本无法售卖
+2. 一个广告产品声称自己的标签体系多么复杂，有多少标签种类，这些在实际上没有太大的意义，而这些标签的人群规模才更有说服力
