--- a/计算广告/计算广告/计算广告.md
+++ b/计算广告/计算广告/计算广告.md
@@ -312,3 +312,45 @@ eCPM = r(a, u, c) = \mu(a, u, c)\cdot\nu(a, u, c)
 ### 4.3.4 产品案例
 1. 合约广告的尴尬：大量精确的标签在合约量的约束下基本无法售卖
 2. 一个广告产品声称自己的标签体系多么复杂，有多少标签种类，这些在实际上没有太大的意义，而这些标签的人群规模才更有说服力
+## 第5章 搜索广告与竞价广告
+1. 随着搜索业务变现的要求，以及精准受众定向技术的发展，在搜索广告和展示广告中都产生了竞价这种交易模式
+2. 竞价交易模式的本质是将量的约束从交易过程中去除，仅仅采用”价高者得“的简单决策方案来投放广告。竞价顺应了定向广告向精细化发展的趋势要求，也为无法用合约售卖的剩余流量找到了可能的变现渠道，使大量中小广告主参与在线广告的可能性和积极性大大增加，也使在线广告的商业环境与传统广告的商业环境有了本质区别
+3. 搜索广告在竞价广告乃至整个在线广告中都居于旗舰产品的位置。除了它的变现能力和市场规模方面的优势，更重要的是，一些在线广告中非常核心的产品策略和技术方案都来源于搜索广告。因此，对搜索广告的深入理解，对理清整个竞价广告市场非常关键
+4. 在竞价的交易逻辑下，展示广告领域也产生了广告网络这种批量采购各种媒体剩余流量，然后按照点击付费的方式售卖给广告主的产品形式
+5. 广告网络中经济的标的有两种：
+  + 一是上下文页面中的关键词，这是直接从搜索广告衍生而来的
+  + 二是根据用户行为加工的兴趣标签，这是从展示广告的定向逻辑发展而来的
+6. 广告网络的竞价环境与搜索广告有所不同：各种上下文或用户标签的有效性差别巨大，另外各种广告位的差别也会很大。因此，除了完全按照eCPM估计排序广告外，冷启动问题以及各种复杂环境下点击率的归一化非常重要
+7. 而对竞价广告的产生，需求方的产品和技术也在发生变化。其中关键的变化有两点：
+  + 一是由面向广告位采买变成面向人群的跨网络采买
+  + 二是帮助广告主在竞价环境中完成量的保证，而这一点是竞价市场本身不再保证的
+8. 能达到这些需求方目的的产品，我们称其为媒体采买平台
+9. 在媒体采买平台里，在量的约束下完成ROI优化的问题依然存在，并且变得比在线分配问题更加困难，ROI优化也称为高端采买平台提供的服务之一
+10. 当然，搜索广告的媒体采买和ROI优化同样十分重要，这项专门的服务被称为搜索引擎营销（Search Engine Marketing, SEM）
+### 5.1 搜索广告
+1. 搜索广告是典型的竞价广告产品，其有点事广告主就某标的物（在这里是关键词）的广告展示机会展开拍卖式的竞争，并根据竞争结果依次占据该广告展示的若干位置。这与展示量合约是截然不同的：首先，量的保证不复存在，广告主需要自行调整调整效果与量的平衡；其次，价格的约定也被去掉，每个广告主都可以是随时调整整个关键词的出价
+### 5.1.1 搜索广告产品形态
+1. 搜索广告是以查询词为粒度进行受众定向，并按照竞价方式售卖、按CPC结算的广告产品
+2. 搜索广告最基本的形式是与自然检索结果一致的文字链，一般会加底色和角上的”推广“”推广链接“”ADs“等字样，以区别于自然结果，这样做的目的是让那些对广告没有兴趣的人尽量减少误点率，从而降低广告主的无效消费和提升用户体验
+3. 由于移动搜索结果一般简单组织成信息流的形式，移动搜索广告的形式比PC搜索广告要简单：在通用搜索中，广告往往出现在最上面或最下面，并没有东区的存在；在一些垂直搜索中，广告则可能穿插在内容里
+4. 搜索广告竞价的标的物是竞价关键词（bid term）。用户输入的查询（query）通过与关键词相匹配，来确定是否可以触发该条广告。匹配的方式既可以采取简单的精确匹配，也可以有很多的扩展方式，这称为查询扩展，是搜索广告的一项比较关键的产品策略
+5. 在互联网广告的整个产品谱系当中，搜索广告有着特别重要的地位，具有以下一些鲜明的产品产品和技术特点：
+  + 搜索广告的变现能力，即oCPM远远高于一般的展示广告，其市场重要程度也就得以彰显。搜索广告高变现能力最关键的产品原因就是，用户主动输入的查询直接反映了用户的意图
+  + 搜索广告的受众定向标签，即使上下文的搜索查询。由于搜索词非常强地表征着用户的意图，因此搜索广告可以进行给常精确的定位。相对于搜索词，根据用户历史行为得到的兴趣标签的重要性大打折扣，这一方面是因为其信号远不如搜索词强烈，另一方面是因为用户这样明确意图的任务是不能被打断的。因此，搜索广告里的eCPM由一般情况下的r(a, u, c)退化成了r（a, c）,其中a为广告，u为用户，c为上下文
+  + 搜索广告的展示形式与自然结果的展示形式非常接近，往往仅在底色和文字链接中有不太引人瞩目的提示。这样的产品设计使得它有原生广告的意味，也进一步提高了广告效果。但是，这样的广告结果对相关性的要求远远超过展示广告，因此在根据查询匹配广告时需要非常精细的策略和技术
+  + 从搜索广告发展起来的竞价交易模式，已经成为互联网广告最主流的交易模式
+### 5.1.2 搜索广告产品新形式
+1. 搜索广告有以下3个方面的探索趋势：
+  + 丰富文字链创意的展示形式，让其更富有表现力以提高点击率
+  + 利用东区对相关性稍低的特点，设计一些拓展广告产品。当然，这种探索并不适用于移动搜索广告
+  + 优化广告与自然结果的关系，在保证相关性和广告效果的前提下提高收入
+2. 具体说明3个探索趋势
+  + 超越文字链的创意。搜索广告也在探索一些能传递更多价值的展示形式，以同时提升用户体验和变现效率。这方面的探索有以下两个重点方向：
+    + 在通用广告链接上增加更多有表现力的信息点。除标题、摘要这些文字链广告创意的标准内容意外，还增加了广告主的Logo、主要内容链接、联系电话等内容。这些都会提高广告的直接效果和品牌价值。更重要的是，这样的发展方向与行业基本无关，可以规模化复制
+    + 直接展示结构化的广告内容摘要，甚至提供一些可直接访问的内容，这样可以减少用户跳转的成本提高推广效率。需要指出，这种内容为了照顾用户体验的一致性，往往不能完全采用搜索广告的竞价方式来运营，一般的运营方式是就某个行业进行阶段性的线下竞价。上面这种发展方向为提升搜索广告效果提供了新的空间，然而尚未成为搜索广告的主流。原因在于这种模式需要分行业设计产品和运营方案，规模化程度有限；另外如果直接对接单品，会产生与个性化重定向一样的商品库对接等复杂的工程问题
+  + 弱相关广告形式。在合理和可解释的范围内可以增加一点相关要求稍低的泛化内容。我们用两个例子来介绍这方面的探索：
+    + 在搜索广告中常见的带有一定品牌意味的广告形式是以广告主对应的一组导航类搜索关键词，在用户搜索这些关键词时展示该广告主的品牌宣传创意。这样的产品，可以提升广告主用户对品牌的认知程度和后续黏性（类似于海报形式）
+    + 搜索引擎提供的同类推荐功能。通过已有广告产品，可以为搜索引擎提供一些离决策稍远、以接触潜在用户为目的的广告。这样的产品绝对不能在搜索左侧的结果中展示，因为那样会引起用户对结果相关性的质疑
+  + 原生化探索。搜索广告从一开始就具有原生广告的特点：它的商业化结果与自然结果一样，由用户的主动意图触发，并且在展示形式上与自然结果相差不大。中国的搜索广告有混排在自然结果中的竞价排名方式。另外一个原生化的趋势是，在有些直接面向商品的信息类搜索中（例如，直接百度搜索”月饼“），在其中混入商业化结果，并进行统一排序。与只提供自然结果相比，这可以增强变现能力；与只提供广告结果相比，这可以避免需求不足带来的结果质量下降。这样的广告，也可称为”商品直达式广告“
+3. 我们认为，搜索广告是比信息流广告更重要的原生广告起源，而且搜索广告的一些特点可以被借鉴到原生广告产品中
+### 5.1.3 搜索广告产品策略
