--- a/计算广告/计算广告/计算广告.md
+++ b/计算广告/计算广告/计算广告.md
@@ -354,3 +354,61 @@ eCPM = r(a, u, c) = \mu(a, u, c)\cdot\nu(a, u, c)
   + 原生化探索。搜索广告从一开始就具有原生广告的特点：它的商业化结果与自然结果一样，由用户的主动意图触发，并且在展示形式上与自然结果相差不大。中国的搜索广告有混排在自然结果中的竞价排名方式。另外一个原生化的趋势是，在有些直接面向商品的信息类搜索中（例如，直接百度搜索”月饼“），在其中混入商业化结果，并进行统一排序。与只提供自然结果相比，这可以增强变现能力；与只提供广告结果相比，这可以避免需求不足带来的结果质量下降。这样的广告，也可称为”商品直达式广告“
 3. 我们认为，搜索广告是比信息流广告更重要的原生广告起源，而且搜索广告的一些特点可以被借鉴到原生广告产品中
 ### 5.1.3 搜索广告产品策略
+1. 搜索广告的决策过程可以分为查询扩展、检索、排序、放置、定价等几个阶段。查询扩展是搜索广告独有的策略，目的是为广告主自行拓展相关的查询词，扩大匹配流量；广告检索和候选广告根据eCPM排序，是广告系统较为通用的核心流程。而定价是竞价广告非常核心的的策略
+
+[搜索广告决策过程示意](https://github.com/JiangRIVERS/ReadingNotes/blob/main/计算广告/搜索广告决策过程示意.jpeg)
+
+![image](https://github.com/JiangRIVERS/ReadingNotes/blob/main/计算广告/搜索广告决策过程示意.jpeg)
+
+2. 在搜索广告中，排序的依据（即eCPM）可以简单地表示成下式：
+```math
+r(a, c)=\mu(a,c)\cdot bid_{CPC}(a)
+```
+其中bid表示：bid term，即竞价关键词。不过在实际产品中，点击率 \mu 这一项会被质量度（quality score）所代替，而后者除了考虑点击率，还需要综合诸如落地页质量等其他因素，得到更全面的对广告质量的评价，其目的是为了避免广告主的恶意行为、促进市场长期发展等
+3. 接下来将会对搜索广告决策过程进行详细展开：
+  + 查询扩展、搜索引擎会提供将广告中的关键词自动匹配得到更多相关查询的服务，常见的匹配方式有以下几种：
+    + 精准匹配。即不对广告主提供的关键词做任何形式的扩展，保证忠实按照广告主的意图精准执行。精准匹配的执行方式是，先将用户输入的查询分词，形成词集；当这个词集与广告主设定的关键词集合完全一致时（不考虑前后顺序），就触发精准匹配
+    + 短语匹配。当用户的查询完全包含广告主关键词或关键词（包括关键词的同义词）的集合时，就认为匹配成功，可以触发相应的广告候选
+    + 广泛匹配。当用户的查询词与广告主的关键词高度相关时，即使广告主并未提交这些查询词，也可能被匹配。广泛匹配的逻辑并没有清晰的定义，一般来说，都是用数据挖掘的算法自动获得。因此，虽然打开广泛匹配可以获得更多的流量，但是流量的准确性往往会打一定的折扣
+    + 否定匹配。由于短语匹配和广泛匹配都是由系统自动完成，难免会出现一些匹配不精准的结果，因此，需要同时向广告主提供否定匹配的功能，即明确指出哪些词是不能被匹配的，这样可以灵活地关停一些低效的流量。由于媒体与广告主利益的不一致，搜索引擎提供的拓词方式未必是对广告主最佳的
+  + 广告放置。当广告候选完成排序以后，需要分别确定北区和东区的广告条数，这个环节称为广告放置（ad placement）。北区是黄金的广告展示位，一般来说，通用搜索引擎的广告收入中绝大部分都来自于北区，因此北区广告的平均条数与收入直接相关。但同时，由于北区广告直接压低了自然结果的位置，必然会对用户体验产生一定的影响。整个搜索该引擎的北区广告平均数，称为NFP（North Foot Print）或ASN（Average Show Number），在考察一项新算法对RPM（千次展示收入）的影响时，我们往往也应同时关注NFP，而在NFP显著变化时，对比对应的RPM变化往往没有太大的意义。确定一条广告能否进入北区要考虑两个关键因素：
+    + 一是该广告相关性是否足够
+    + 二是该广告的RPM是否足够
+    
+    前者是为了确保用户体验，后者是为了高效地利用展示位置。根据整体NFP的约束和收入的目标，我们可以很容易通过数据模拟的方法确定相关性和RPM的最优阈值。
+    前面说过，搜索广告的策略一般来说不太考虑用户u的影响，但是在确定北区广告条数这个为题上是一个例外，这就是个性化的广告放置。个人偏好、对广告了解程度的不同，不同的用户对广告的容忍度和点击率呈现出明显的差别
+### 5.1.3 产品案例
+1. Google AdWords
+2. 淘宝直通车。在一些高商业价值的垂直搜索引擎（如电商、房产、汽车应用下载）中，利用搜索广告的产品体系进行变现是需要最优先考虑的流量变现方式
+### 5.2 位置拍卖与机制设计
+1. 在封闭的竞价广告市场中，出价是广告主阶段性调整的，而到了广告实际交易阶段，广告主可以对每次展示实时调整出价。但是从拍卖机制的角度看，这两种竞价没有本质差别
+2. 假设有一组广告位可以被占用，将这些广告位按照某经验价值排名，分别记为s = 1, 2, ..., S。在某次广告请求中，有一组广告a = 1, 2, ..., A出价参与拍卖，而每个广告的出价记为b_a。系统将前S个高出价的广告依次放到前面排序号的S个广告位上，这样的问题称为位置拍卖（position auction）。当某个广告a被放在s位置上时，其期望收益即eCPM为
+```math
+r_{as}=\mu_{s}\upsilon_{a}
+```
+这里做了一个假设，比如点击率\mu仅与位置s有关，而点击价值\upsilon仅与广告a有关，但这并不影响对竞价问题宏观市场的讨论
+3. 如何设计这样的位置拍卖问题中的一些重要机制，往往对整个竞价市场的收益、稳定性、公平性等有着巨大的影响，这一类问题称为机制设计问题。在广告中常见的机制设计问题，包括定价、市场保留价、价格挤压等
+
+[位置拍卖问题示例](https://github.com/JiangRIVERS/ReadingNotes/blob/main/计算广告/位置拍卖问题示例.jpeg)
+
+![image](https://github.com/JiangRIVERS/ReadingNotes/blob/main/计算广告/位置拍卖问题示例.jpeg)
+
+### 5.2.1 市场保留价
+1. 为了控制广告的质量和保持一定的出售单价，竞价广告市场往往要设置一个赢得拍卖位置的最低价格，我们将这一价格称为市场保留价（Market Reserve Price, MPR），俗称”起拍价“或”底价“
+2. 如果根据定价策略算出的付费低于市场保留价（以广义第二高价为例，很容易验证这种情况是可能发生的），也需要调整到市场保留价的水平上
+3. 市场保留价的设置有两种方式：
+  + 一是对整个竞价市场采用相同的保留价格
+  + 二是根据不同标的物（如搜索广告里的关键词）的特性设置不同的保留价格。如果按照后一种方法设置，显然应该对那些竞争较激烈的关键词设置较高的MRP
+4. 一个特定关键词的最优起价仅与竞价和质量度的分布有关，通过拟合其被保留价截断的分布为核心，可以通过理论上的计算公式来解出最优起价
+5. 无论是调整市场整体的MRP，还是在不同流量上划分动态设置MRP，其基本原理都是根据竞价广告主的eCPM分布，找到一个使填充率没有明显下降的CPM底价，然后再根据质量度倒算其CPC底价
+### 5.2.2 定价问题
+1. 围绕位置拍卖最重要的机制设计是定价（pricing）问题，它探讨的是在一次位置拍卖中，给定参与者的出价以及他们的期望收益，如何对最后获得某个位置的广告商收取合适的费用
+2. 对一次位置竞价来说，其对称纳什均衡（symmetric Nash equilibrium）状态可以表示为下式：
+$$
+\begin{aligned}
+\mu_s(\upsilon_s-q_s)\ge\mu_t(\upsilon_s-q_t), \forall t>s,
+\\
+\mu_s(\upsilon_s-q_s)\ge\mu_t(\upsilon_s-q_t), \forall t<s
+\end{aligned}
+$$
+注意 
